--- a/contacto.html
+++ b/contacto.html
@@ -2,49 +2,80 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Juan Pablo Lozano</title>
+	<title>J&J Systems</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/estilo.css">
-	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/estilos.css">
+	<link href="https://fonts.googleapis.com/css?family=Lato|Pacifico" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<nav class="se-gris padding-largo text-center">
-		<ul class="sin-lista">
-			<li class="col-md-3 inline-block"><a href="index.html" class="blue">Juan Pablo Lozano</a></li>
-			<li class="col-md-3 inline-block"><a href="skills.html" class="blue">Habilidades</a></li>
-			<li class="col-md-3 inline-block"><a href="index.html" class="blue">Acerca de</a></li>
-		</ul>
-	</nav>
-	<section>
-		<div class="mediano text-center">
-			<h1 class="lobster grande azul">Contacto</h1>
-			<p>
-				Juana Manso 1069, Buenos Aires, Argentina
-			</p>
-			<p>
-				Escribeme a: <a href="mailto:lozanotux@gmail.com">lozanotux@gmail.com</a>
-			</p>
-			<div id="map"></div>
-			<script>
-		      function initMap() {
-		        var uluru = {lat: -34.6123649, lng: -58.3793877};
-		        var map = new google.maps.Map(document.getElementById('map'), {
-		          zoom: 4,
-		          center: uluru
-		        });
-		        var marker = new google.maps.Marker({
-		          position: uluru,
-		          map: map
-		        });
-		      }
-		    </script>
-		    <script async defer
-		    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
-		    </script>
+    <!--MOBILE MENU-->
+    <nav class="navbar navbar-inverse visible-xs" id="mobile-nav">
+      <div class="">
+        <div class="navbar-header">
+            <center>
+                <div class="mobile-header">
+                </div>
+            </center>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>                        
+            </button>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav">
+            <li class="active"><a id="activo" href="index.html">J&J Systems</a></li>
+            <li><a href="nosotros.html"><i class="fa fa-users margen-icon" aria-hidden="true"></i> Nosotros</a></li>
+            <li><a href="contacto.html"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i> Contacto</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
+    <!-- MENU DESKTOP AND TABLET -->
+    <div class="menu">
+        <nav class="padding-largo text-center visible-sm visible-md visible-lg" id="navegacion">
+            <div class="navegacion a-la-izquierda">
+                <a href="index.html">J&J Systems</a>
+            </div>
+            <ul class="sin-lista a-la-derecha">
+                <li class="inline-block espacio-derecha"><a href="nosotros.html"><i class="fa fa-users margen-icon" aria-hidden="true"></i>
+ Nosotros</a></li>
+                <li class="inline-block"><a href="contacto.html"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i>
+ Contacto</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="main ten-sombra-interna">
+        <div class="col-xs-12 col-sm-10 col-md-8 center-block quitar-float espacio-arriba text-center">
+            <h1 class="pacifico muy-grande margen-compensador animated zoomInDown">J&J</h1>
+            <h2 class="pacifico grande sin-espacio-arriba animated fadeInDown retrasar-1s">Systems</h2>
+            <div class="animated fadeInDown margen-arriba retrasar-1p5s">
+                <h2>Las Mejores Paginas Web A Su Medida</h2>
+                <h3>A La Vanguardia A Través De La <a class="se-azul sin-decoracion brillar-en-azul" href="#Tecnologia">Tecnología</a></h3>
+            </div>
+        </div>
+    </div>
+    <div id="Tecnologia" class="container text-center">
 
-		</div>
-	</section>
+    </div>
+    <!--FOOTER DESKTOP-->
+    <footer id="pie" class="container-fluid text-center">
+            <p>Copyright &copy; 
+                <script language="JavaScript" type="text/javascript">
+                    now = new Date
+                    theYear=now.getYear()
+                    if (theYear < 1900)
+                    theYear=theYear+1900
+                    document.write(theYear)
+                </script>
+                Todos los derechos reservados por Juan Pablo Lozano</p>
+    </footer>
 </body>
 </html>
