--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
             <li class="active"><a id="activo" href="index.html">J&J Systems</a></li>
-            <li><a href="contactme.html"><i class="fa fa-users margen-icon" aria-hidden="true"></i> Nosotros</a></li>
-            <li><a href="index.html"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i> Contacto</a></li>
+            <li><a href="nosotros.html"><i class="fa fa-users margen-icon" aria-hidden="true"></i> Nosotros</a></li>
+            <li><a href="contacto.html"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i> Contacto</a></li>
           </ul>
         </div>
       </div>
@@ -45,9 +45,9 @@
                 <a href="index.html">J&J Systems</a>
             </div>
             <ul class="sin-lista a-la-derecha">
-                <li class="inline-block espacio-derecha"><a href="contactme.html"><i class="fa fa-users margen-icon" aria-hidden="true"></i>
+                <li class="inline-block espacio-derecha"><a href="nosotros.html"><i class="fa fa-users margen-icon" aria-hidden="true"></i>
  Nosotros</a></li>
-                <li class="inline-block"><a href="index.html"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i>
+                <li class="inline-block"><a href="contacto.html"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i>
  Contacto</a></li>
             </ul>
         </nav>
