Add HTACCESS Rules

--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="background-color: #444C5C;">
     <!--MOBILE MENU-->
     <nav class="navbar navbar-inverse visible-xs" id="mobile-nav">
       <div class="">
@@ -54,16 +54,16 @@
     </div>
     <div class="main ten-sombra-interna">
         <div class="col-xs-12 col-sm-10 col-md-8 center-block quitar-float espacio-arriba text-center">
-            <h1 class="pacifico muy-grande margen-compensador animated zoomInDown">J&J</h1>
-            <h2 class="pacifico grande sin-espacio-arriba animated fadeInDown retrasar-1s">Systems</h2>
-            <div class="animated fadeInDown margen-arriba retrasar-1p5s">
-                <h2>Las Mejores Paginas Web A Su Medida</h2>
-                <h3>A La Vanguardia A Través De La <a class="se-azul sin-decoracion brillar-en-azul" href="#Tecnologia">Tecnología</a></h3>
+            <h1 class="pacifico muy-grande margen-compensador animated zoomInDown visible-sm visible-md visible-lg">Contacto</h1>
+            <h1 class="pacifico muy-grande-m margen-compensador animated zoomInDown visible-xs">Contacto</h1>
+            <div class="animated fadeInDown retrasar-1s">
+                <h2>Buenos Aires - Argentina</h2>
+                <h3>Escribenos a <a class="se-azul sin-decoracion brillar-en-azul" href="mailto:sierra260190@gmail.com">
+                    sierra260190@gmail.com</a></h3>
+                <h3 class="margen-correo">o a <a class="se-azul sin-decoracion brillar-en-azul" href="mailto:lozanotux@gmail.com">
+                    lozanotux@gmail.com</a></h3>
             </div>
         </div>
-    </div>
-    <div id="Tecnologia" class="container text-center">
-
     </div>
     <!--FOOTER DESKTOP-->
     <footer id="pie" class="container-fluid text-center">
