--- a/nosotros.html
+++ b/nosotros.html
@@ -57,7 +57,7 @@
     <div class="main ten-sombra-interna visible-sm visible-md visible-lg">
         <div class="col-sm-12 col-md-10 center-block quitar-float espacio-arriba text-center personas-container">
             <h1 class="pacifico muy-grande margen-titulo animated fadeIn">Nosotros</h1>
-                <div class="col-sm-6 juan">
+                <div class="col-sm-6 juan animated fadeIn">
                     <img src="imgs/juan.png" alt="Juan Pablo Lozano" class="img-circle avatar" width="128">
                     <h2 class="pacifico">Juan Pablo Lozano</h2>
                     <p>
@@ -67,7 +67,7 @@
                         Director Tecnico
                     </p>
                 </div>
-                <div class="col-sm-6 jonny">
+                <div class="col-sm-6 jonny animated fadeIn">
                     <img src="imgs/jonny.jpg" alt="Jonathan Sierra" class="img-circle avatar" width="128">
                     <h2 class="pacifico">Jonathan Sierra</h2>
                     <p>
@@ -78,7 +78,7 @@
                     </p>
                 </div>
             </div>
-            <div class="buy col-sm-12 text-center">
+            <div class="buy col-sm-12 text-center animated fadeIn">
                 <br>
                 <br>
                 <a href="#pagar"><i class="fa fa-usd" aria-hidden="true"></i> Compranos Una Cerveza</a>
