Add shorts URLs

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a id="activo" href="index.html">J&J Systems</a></li>
             <li><a href="nosotros.html"><i class="fa fa-users margen-icon" aria-hidden="true"></i> Nosotros</a></li>
-            <li><a href="contacto"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i> Contacto</a></li>
+            <li><a href="/contacto"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i> Contacto</a></li>
           </ul>
         </div>
       </div>
@@ -47,7 +47,7 @@
             <ul class="sin-lista a-la-derecha">
                 <li class="inline-block espacio-derecha"><a href="nosotros.html"><i class="fa fa-users margen-icon" aria-hidden="true"></i>
  Nosotros</a></li>
-                <li class="inline-block"><a href="contacto"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i>
+                <li class="inline-block"><a href="/contacto"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i>
  Contacto</a></li>
             </ul>
         </nav>
