Add shorts URLs for all links

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a id="activo" href="index.html">J&J Systems</a></li>
-            <li><a href="nosotros.html"><i class="fa fa-users margen-icon" aria-hidden="true"></i> Nosotros</a></li>
+            <li class="active"><a id="activo" href="/">J&J Systems</a></li>
+            <li><a href="/nosotros"><i class="fa fa-users margen-icon" aria-hidden="true"></i> Nosotros</a></li>
             <li><a href="/contacto"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i> Contacto</a></li>
           </ul>
         </div>
@@ -42,10 +42,10 @@
     <div class="menu">
         <nav class="padding-largo text-center visible-sm visible-md visible-lg" id="navegacion">
             <div class="navegacion a-la-izquierda">
-                <a href="index.html">J&J Systems</a>
+                <a href="/">J&J Systems</a>
             </div>
             <ul class="sin-lista a-la-derecha">
-                <li class="inline-block espacio-derecha"><a href="nosotros.html"><i class="fa fa-users margen-icon" aria-hidden="true"></i>
+                <li class="inline-block espacio-derecha"><a href="/nosotros"><i class="fa fa-users margen-icon" aria-hidden="true"></i>
  Nosotros</a></li>
                 <li class="inline-block"><a href="/contacto"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i>
  Contacto</a></li>
