--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
             </ul>
         </nav>
     </div>
-    <div class="main ten-sombra-interna">
+    <div class="main ten-sombra-interna" style="background-image: url('imgs/bg.jpg');background-repeat: no-repeat;background-attachment: fixed;background-position: center;">
         <div class="col-xs-12 col-sm-10 col-md-8 center-block quitar-float espacio-arriba text-center">
-            <h1 class="pacifico muy-grande margen-compensador animated zoomInDown">J&J</h1>
-            <h2 class="pacifico grande sin-espacio-arriba animated fadeInDown retrasar-1s">Systems</h2>
+            <h1 class="pacifico muy-grande margen-compensador animated zoomInDown visible-sm visible-md visible-lg">J&J</h1>
+            <h1 class="pacifico muy-grande margen-compensador-m animated zoomInDown visible-xs">J&J</h1>
+            <h2 class="pacifico grande sin-espacio-arriba animated fadeInDown retrasar-1s visible-sm visible-md visible-lg">Systems</h2>
+            <h2 class="pacifico grande-m sin-espacio-arriba animated fadeInDown retrasar-1s visible-xs">Systems</h2>
             <div class="animated fadeInDown margen-arriba retrasar-1p5s">
                 <h2>Las Mejores Paginas Web A Su Medida</h2>
                 <h3>A La Vanguardia A Través De La <a class="se-azul sin-decoracion brillar-en-azul" href="#Tecnologia">Tecnología</a></h3>
