Finish the website

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2 class="pacifico grande-m sin-espacio-arriba animated fadeInDown retrasar-1s visible-xs">Systems</h2>
             <div class="animated fadeInDown margen-arriba retrasar-1p5s">
                 <h2>Las Mejores Paginas Web A Su Medida</h2>
-                <h3>A La Vanguardia A Través De La <a class="se-azul sin-decoracion brillar-en-azul" href="#Tecnologia">Tecnología</a></h3>
+                <h3>Generando Tu Conexción A La <a class="se-azul sin-decoracion brillar-en-azul" href="#Tecnologia">Tecnología</a></h3>
             </div>
         </div>
     </div>
@@ -71,7 +71,7 @@
                     <img src="imgs/html5.png" alt="HTML5" class="img-responsive img-centro" width="128">
                     <p class="justificado">
                         HTML5 mejora la estructura de la información, amplia las funcionalidades de formularios, la capacidad de
-                        incluir elementos multimedia y gráficos de manera nativa (sin necesidad de Flash). Esto conlleva un poder
+                        incluir elementos multimedia y gráficos de manera nativa (sin necesidad de <a href="http://www.adobe.com/es/products/flashplayer.html" target="_blank">Flash</a>). Esto conlleva un poder
                         y una capacidad enorme que hace que su página sea mas portable entre diversos dispositivos.
                     </p>
                 </div>
@@ -79,7 +79,7 @@
                 <div class="col-sm-6 col-md-4">
                     <img src="imgs/css3.png" alt="HTML5" class="img-responsive img-centro" width="128">
                     <p class="justificado">
-                        CSS3 mejora la visualización y permite que su página web sea mucho más atractiva y adaptable a todo tipo de dispositivos (tablets, smartphones, PC, etc). Lo que permite un comportamiento responsivo y dinámico haciendo
+                        CSS3 mejora la visualización y permite que su página web sea mucho más atractiva y adaptable a todo tipo de dispositivos (tablets, smartphones, PC, etc). Lo que permite un comportamiento <a href="https://developers.google.com/web/fundamentals/design-and-ui/responsive/?hl=es-419" target="_blank">responsivo</a> y dinámico haciendo
                         más accesible el modo en que el contenido se muestra.
                     </p>
                 </div>
@@ -96,7 +96,7 @@
                 <div class="col-sm-6 col-md-4">
                     <img src="imgs/bootsrap.png" alt="Bootstrap" class="img-responsive img-centro" width="128">
                     <p class="justificado">
-                        Bootstrap (de la mano de Twitter) una manera inteligente de construir su página web con un diseño innovador
+                        Bootstrap (de la mano de <a href="https://twitter.com/?lang=es" target="_blank">Twitter</a>) una manera inteligente de construir su página web con un diseño innovador
                         y organización de los elementos de una manera estratégica para estar al frente de sus necesidades y sacar el mejor provecho. Vive la mejor experiencia con interfaces de usuarios extraordinarias!                        
                     </p>
                 </div>
@@ -114,7 +114,7 @@
                 <div class="col-sm-6 col-md-4">
                     <img src="imgs/google.png" alt="Google" class="img-responsive img-centro" width="128">
                     <p class="justificado">
-                        Usamos todas las tecnologías que brinda Google para sacar el máximo partido a la web. Aproveche los servicios
+                        Usamos todas las <a href="https://cloud.google.com/?hl=es-ar&utm_source=google&utm_medium=cpc&utm_campaign=latam-AR-all-pt-dr-bkws-all-all-trial-b-latam-1002243-LUAC0000361&utm_content=text-ad-none-any-DEV_c-CRE_204791176530-ADGP_BKWS%20%7C%20Multi%20~%20Google%20Services-KWID_43700022305035335-kwd-332718162164-userloc_1001773&utm_term=KW_%2Bgoogle%20%2Bservices-ST_%2Bgoogle%20%2Bservices&dclid=CJ6z7O_vn9YCFUYoHwodGKoBnw" target="_blank">tecnologías que brinda Google</a> para sacar el máximo partido a la web. Aproveche los servicios
                         de Posicionamiento en Buscadores, Geolocalización y Mapas, Traducción e Idiomas, Tipografía y Fuentes, Paleta de Colores, etc. No se quede atrás!
                     </p>
                 </div>
