--- a/nosotros.html
+++ b/nosotros.html
@@ -81,7 +81,7 @@
             <div class="buy col-sm-12 text-center animated fadeIn">
                 <br>
                 <br>
-                <a href="#pagar"><i class="fa fa-usd" aria-hidden="true"></i> Compranos Una Cerveza</a>
+                <a href="https://www.mercadopago.com/mla/checkout/start?pref_id=52860854-56a9f288-6072-41f7-9621-fea20cecf9bd"><i class="fa fa-usd" aria-hidden="true"></i> Compranos Una Cerveza</a>
             </div>
     </div>
     <!-- MAIN MOBILE -->
@@ -113,7 +113,7 @@
                 <div class="buy col-sm-12 text-center">
                     <br>
                     <br>
-                    <a href="#pagar"><i class="fa fa-usd" aria-hidden="true"></i> Compranos Una Cerveza</a>
+                    <a href="https://www.mercadopago.com/mla/checkout/start?pref_id=52860854-56a9f288-6072-41f7-9621-fea20cecf9bd"><i class="fa fa-usd" aria-hidden="true"></i> Compranos Una Cerveza</a>
                 </div>
             </div>
     </div>
