--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2 class="pacifico grande-m sin-espacio-arriba animated fadeInDown retrasar-1s visible-xs">Systems</h2>
             <div class="animated fadeInDown margen-arriba retrasar-1p5s">
                 <h2>Las Mejores Paginas Web A Su Medida</h2>
-                <h3>Generando Tu Conexción A La <a class="se-azul sin-decoracion brillar-en-azul" href="#Tecnologia">Tecnología</a></h3>
+                <h3>Generando Tu Conexión A La <a class="se-azul sin-decoracion brillar-en-azul" href="#Tecnologia">Tecnología</a></h3>
             </div>
         </div>
     </div>
