Fix the active item in mobile menu

--- a/nosotros.html
+++ b/nosotros.html
@@ -30,8 +30,8 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a id="activo" href="/">J&J Systems</a></li>
-            <li><a href="/nosotros"><i class="fa fa-users margen-icon" aria-hidden="true"></i> Nosotros</a></li>
+            <li><a href="/">J&J Systems</a></li>
+            <li class="active"><a id="activo" href="/nosotros"><i class="fa fa-users margen-icon" aria-hidden="true"></i> Nosotros</a></li>
             <li><a href="/contacto"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i> Contacto</a></li>
           </ul>
         </div>
