--- a/contacto.html
+++ b/contacto.html
@@ -30,9 +30,9 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a id="activo" href="/">J&J Systems</a></li>
+            <li><a href="/">J&J Systems</a></li>
             <li><a href="/nosotros"><i class="fa fa-users margen-icon" aria-hidden="true"></i> Nosotros</a></li>
-            <li><a href="/contacto"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i> Contacto</a></li>
+            <li class="active"><a id="activo" href="/contacto"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i> Contacto</a></li>
           </ul>
         </div>
       </div>
