--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </ul>
         </nav>
     </div>
-    <div class="main ten-sombra-interna" style="background: url('imgs/bg.jpg');background-repeat: no-repeat;background-attachment: fixed;background-position: center;">
+    <div class="main ten-sombra-interna" style="background: url('imgs/bg.jpg');background-repeat: no-repeat;background-attachment: fixed;background-position: center;background-size: cover;">
         <div class="col-xs-12 col-sm-10 col-md-8 center-block quitar-float espacio-arriba text-center">
             <h1 class="pacifico muy-grande margen-compensador animated zoomInDown visible-sm visible-md visible-lg">J&J</h1>
             <h1 class="pacifico muy-grande margen-compensador-m animated zoomInDown visible-xs">J&J</h1>
