Fix background on iOS intento 8

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </ul>
         </nav>
     </div>
-    <div class="main ten-sombra-interna ten-imagen-fondo full-screen">
+    <div class="main ten-sombra-interna ten-imagen-fondo">
         <div class="col-xs-12 col-sm-10 col-md-8 center-block quitar-float espacio-arriba text-center">
             <h1 class="pacifico muy-grande margen-compensador animated zoomInDown visible-sm visible-md visible-lg">J&J</h1>
             <h1 class="pacifico muy-grande margen-compensador-m animated zoomInDown visible-xs">J&J</h1>
