Add Portfolio page and fix bug in navbar

--- a/contacto.html
+++ b/contacto.html
@@ -32,6 +32,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/">J&J Systems</a></li>
             <li><a href="/nosotros"><i class="fa fa-users margen-icon" aria-hidden="true"></i> Nosotros</a></li>
+            <li><a href="/portfolio"><i class="fa fa-suitcase"></i> Portfolio</a></li>
             <li class="active"><a id="activo" href="/contacto"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i> Contacto</a></li>
           </ul>
         </div>
@@ -44,9 +45,10 @@
             <div class="navegacion a-la-izquierda">
                 <a href="/">J&J Systems</a>
             </div>
-            <ul class="sin-lista a-la-derecha">
+            <ul class="sin-lista a-la-derecha arriba-detodo">
                 <li class="inline-block espacio-derecha"><a href="/nosotros"><i class="fa fa-users margen-icon" aria-hidden="true"></i>
  Nosotros</a></li>
+                <li class="inline-block espacio-derecha"><a href="/portfolio"><i class="fa fa-suitcase"></i> Portfolio</a></li>
                 <li class="inline-block"><a href="/contacto"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i>
  Contacto</a></li>
             </ul>
@@ -57,13 +59,26 @@
             <h1 class="pacifico muy-grande margen-compensador animated zoomInDown visible-sm visible-md visible-lg">Contacto</h1>
             <h1 class="pacifico muy-grande-m margen-compensador animated zoomInDown visible-xs">Contacto</h1>
             <div class="animated fadeInDown retrasar-1s">
-                <h2>Buenos Aires - Argentina</h2>
-                <h3>Escribenos a <a class="se-azul sin-decoracion brillar-en-azul" href="mailto:sierra260190@gmail.com">
-                    sierra260190@gmail.com</a></h3>
-                <h3 class="margen-correo">o a <a class="se-azul sin-decoracion brillar-en-azul" href="mailto:lozanotux@gmail.com">
-                    lozanotux@gmail.com</a></h3>
+                <h2 style="font-size: 2em!important;">
+                    <i class="fa fa-globe" style="margin-right: 6px;"></i>
+                    Buenos Aires - Argentina
+                </h2>
+                <h3>
+                    <i class="fa fa-commenting-o" style="margin-right: 6px;"></i>
+                    Escribenos a
+                </h3>
             </div>
         </div>
+        <ul class="lista-contactos animated fadeInDown retrasar-1p5s">
+            <li>
+                <i class="fa fa-envelope"></i>
+                <a class="se-azul sin-decoracion brillar-en-azul" href="mailto:sierra260190@gmail.com">sierra260190@gmail.com</a>
+            </li>
+            <li>
+                <i class="fa fa-envelope"></i>
+                <a class="se-azul sin-decoracion brillar-en-azul" href="mailto:lozanotux@gmail.com">lozanotux@gmail.com</a></h3>
+            </li>
+        </ul>
     </div>
     <!--FOOTER DESKTOP-->
     <footer id="pie" class="container-fluid text-center">
