--- a/nosotros.html
+++ b/nosotros.html
@@ -32,6 +32,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/">J&J Systems</a></li>
             <li class="active"><a id="activo" href="/nosotros"><i class="fa fa-users margen-icon" aria-hidden="true"></i> Nosotros</a></li>
+            <li><a href="/portfolio"><i class="fa fa-suitcase"></i> Portfolio</a></li>
             <li><a href="/contacto"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i> Contacto</a></li>
           </ul>
         </div>
@@ -44,9 +45,10 @@
             <div class="navegacion a-la-izquierda">
                 <a href="/">J&J Systems</a>
             </div>
-            <ul class="sin-lista a-la-derecha">
+            <ul class="sin-lista a-la-derecha arriba-detodo">
                 <li class="inline-block espacio-derecha"><a href="/nosotros"><i class="fa fa-users margen-icon" aria-hidden="true"></i>
  Nosotros</a></li>
+                <li class="inline-block espacio-derecha"><a href="/portfolio"><i class="fa fa-suitcase"></i> Portfolio</a></li>
                 <li class="inline-block"><a href="/contacto"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i>
  Contacto</a></li>
             </ul>
@@ -81,7 +83,10 @@
             <div class="buy col-sm-12 text-center animated fadeIn">
                 <br>
                 <br>
-                <a href="https://www.mercadopago.com/mla/checkout/start?pref_id=52860854-56a9f288-6072-41f7-9621-fea20cecf9bd"><i class="fa fa-usd" aria-hidden="true"></i> Compranos Una Cerveza</a>
+                <a href="/portfolio">
+                    <i class="fa fa-suitcase" style="margin-right: 6px;"></i>
+                    Conozca nuestros trabajos recientes
+                </a>
             </div>
     </div>
     <!-- MAIN MOBILE -->
@@ -113,7 +118,10 @@
                 <div class="buy col-sm-12 text-center">
                     <br>
                     <br>
-                    <a href="https://www.mercadopago.com/mla/checkout/start?pref_id=52860854-56a9f288-6072-41f7-9621-fea20cecf9bd"><i class="fa fa-usd" aria-hidden="true"></i> Compranos Una Cerveza</a>
+                    <a href="/portfolio">
+                        <i class="fa fa-suitcase" style="margin-right: 6px;"></i>
+                        Conozca nuestros trabajos recientes
+                    </a>
                 </div>
             </div>
     </div>
