--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a id="activo" href="/">J&J Systems</a></li>
             <li><a href="/nosotros"><i class="fa fa-users margen-icon" aria-hidden="true"></i> Nosotros</a></li>
+            <li><a href="/portfolio"><i class="fa fa-suitcase"></i> Portfolio</a></li>
             <li><a href="/contacto"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i> Contacto</a></li>
           </ul>
         </div>
@@ -45,9 +46,10 @@
             <div class="navegacion a-la-izquierda">
                 <a href="/">J&J Systems</a>
             </div>
-            <ul class="sin-lista a-la-derecha">
+            <ul class="sin-lista a-la-derecha arriba-detodo">
                 <li class="inline-block espacio-derecha"><a href="/nosotros"><i class="fa fa-users margen-icon" aria-hidden="true"></i>
  Nosotros</a></li>
+                <li class="inline-block espacio-derecha"><a href="/portfolio"><i class="fa fa-suitcase"></i> Portfolio</a></li>
                 <li class="inline-block"><a href="/contacto"><i class="fa fa-envelope margen-icon" aria-hidden="true"></i>
  Contacto</a></li>
             </ul>
