Change XAMPP by PHP

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
         <div class="col-xs-12 separador visible-xs"></div>
                 <div class="col-sm-6 col-md-4">
-                    <img src="imgs/css3.png" alt="HTML5" class="img-responsive img-centro" width="128">
+                    <img src="imgs/css3.png" alt="CSS3" class="img-responsive img-centro" width="128">
                     <p class="justificado">
                         CSS3 mejora la visualización y permite que su página web sea mucho más atractiva y adaptable a todo tipo de dispositivos (tablets, smartphones, PC, etc). Lo que permite un comportamiento <a href="https://developers.google.com/web/fundamentals/design-and-ui/responsive/?hl=es-419" target="_blank">responsivo</a> y dinámico haciendo
                         más accesible el modo en que el contenido se muestra.
@@ -89,7 +89,7 @@
         <div class="col-xs-12 separador visible-xs"></div>
         <div class="col-sm-12 separador visible-sm"></div>
                 <div class="col-sm-6 col-md-4">
-                    <img src="imgs/js.png" alt="HTML5" class="img-responsive img-centro" width="128">
+                    <img src="imgs/js.png" alt="JS" class="img-responsive img-centro" width="128">
                     <p class="justificado">
                         JavaScript permite que usted goce de interactividad y excelentes efectos especiales en su página web lo que abre un abanico de posibilidades y un sin fin de recursos que dan paso a la creatividad para transmitir mejor los mensajes que usted desea hacer llegar a sus lectores.
                     </p>
@@ -106,11 +106,10 @@
         <div class="col-xs-12 separador visible-xs"></div>
         <div class="col-sm-12 separador visible-sm"></div>
                 <div class="col-sm-6 col-md-4">
-                    <img src="imgs/xampp.png" alt="XAMPP" class="img-responsive img-centro" width="128">
+                    <img src="imgs/php.png" alt="PHP" class="img-responsive img-centro" width="128">
                     <p class="justificado">
-                        XAMPP es un conjunto de herramientas que dan el sustento más estable para garantizar el funcionamiento general
-                        de su página web de una manera segura y controloada. Además de brindar flexibilidad habilita el soporte para
-                        toda una galera de tecnologías totalmente novedosas.
+                        PHP se utiliza para generar páginas web dinámicas, para interactuar con el usuario. Necesita guardar información en una base de datos? O hacer un motor de búsquedas? o tal vez formularios para que
+                        los usuarios aporten datos? elija PHP y aproveche todo el potencial que ofrece.
                     </p>
                 </div>
         <div class="col-xs-12 separador visible-xs"></div>
