Add tallersierra.com.ar to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -84,6 +84,18 @@
                           </tr>
                           <tr>
                             <td>
+                                <img src="http://tallersierra.com.ar/img/Favicon128.png" width="16" height="16" />
+                                Taller Sierra
+                            </td>
+                            <td>Automotriz</td>
+                            <td>
+                                <a href="http://tallersierra.com.ar/" class="se-azul sin-decoracion brillar-en-azul">
+                                  http://tallersierra.com.ar/
+                                </a>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>
                                 <img src="http://gonzaleznorberto.com.ar/favicon.ico" width="16" height="16" />
                                 Norberto Gonzalez
                             </td>
@@ -137,6 +149,14 @@
                                 <img src="http://gonzaleznorberto.com.ar/favicon.ico" width="16" height="16" />
                                 <a href="http://gonzaleznorberto.com.ar/" class="se-azul sin-decoracion brillar-en-azul">
                                     http://gonzaleznorberto.com.ar/
+                                </a>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>
+                                <img src="http://tallersierra.com.ar/img/Favicon128.png" width="16" height="16" />
+                                <a href="http://tallersierra.com.ar/" class="se-azul sin-decoracion brillar-en-azul">
+                                  http://tallersierra.com.ar/
                                 </a>
                             </td>
                           </tr>
