--- a/nosotros.html
+++ b/nosotros.html
@@ -120,7 +120,7 @@
                     <br>
                     <a href="/portfolio">
                         <i class="fa fa-suitcase" style="margin-right: 6px;"></i>
-                        Conozca nuestros trabajos recientes
+                        Nuestros Trabajos Recientes
                     </a>
                 </div>
             </div>
